ionos_dev/wallet/wallet-api/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: wallet-api
  name: wallet-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: wallet-api
      app.kubernetes.io/name: wallet-api
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: wallet-api
        app.kubernetes.io/name: wallet-api
    spec:
      containers:
      - image: in2workspace/wallet-api:v1.2.0-SNAPSHOT
        imagePullPolicy: Always
        name: wallet-api
