ionos_dev/wallet/wallet-api/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallet-server
spec:
  ports:
  - name: wallet-api
    port: 8080
  selector:
    app.kubernetes.io/name: wallet-api
