ionos_dev/wallet/wallet-api/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallet-api
  namespace: digital-identity
  annotations: 
    cert-manager.io/cluster-issuer: letsencrypt-dome-wallet # todo: modify this
    nginx.ingress.kubernetes.io/enable-websocket: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "240"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "240"
spec:
  ingressClassName: nginx
  rules:
  - host: dome-wallet.eu # todo: modify this
    http:
      paths:
      - backend:
          service:
            name: wallet-api
            port:
              number: 8080
        path: /wallet-api
        pathType: Prefix
  tls:
  - hosts:
    - dome-wallet.eu # todo: modify this
    secretName: dome-wallet-secret # todo: modify this
